@@ -115,6 +115,7 @@ extern void Screen_ReturnFromFullScreen(void);
 extern void Screen_ClearScreen(void);
 extern void Screen_SetDrawModes(void);
 extern void Screen_SetWindowRes(int Width,int Height,int BitCount);
+extern void Screen_Handle8BitPalettes(void);
 extern void Screen_Blit(BOOL bSwapScreen);
 extern FRAMEBUFFER *Screen_GetOtherFrameBuffer(void);
 extern void Screen_DrawFrame(BOOL bForceFlip);
