@@ -149,54 +149,3 @@ void M68000_Exception(void)
   Exception(ExceptionVector/4, m68k_getpc());
 }
 
-
-/*-----------------------------------------------------------------------*/
-/*
-  Handle Line-A OpCode exception(Top 4-bit in opcode are 0xA)
-*/
-/*
-void M68000_Line_A_OpCode(void)
-{
-  PC -= SIZE_WORD;    // PC needs to be at address of Line-A instruction
-  ExceptionVector = EXCEPTION_LINE_A;
-  M68000_Exception();
-}
-*/
-
-
-/*-----------------------------------------------------------------------*/
-/*
-  During init do 0xA000, followed by 0xA0FF - we use this to get pointer to Line-A structure details(to fix for extended VDI res)
-*/
-void M68000_Line_A_Trap(void)
-{
-/* FIXME */
-/*
-
-  PUSH_ALL
-  __asm {
-    mov    edx,DWORD PTR Regs[REG_D0*4]
-    mov    [LineABase],edx
-    mov    edx,DWORD PTR Regs[REG_A1*4]
-    mov    [FontBase],edx
-    call  VDI_LineA                // Modify Line-A structure
-  }
-  POP_ALL
-  RET
-*/
-}
-
-
-/*-----------------------------------------------------------------------*/
-/*
-  Handle Line-F OpCode exception(Top 4-bit in opcode are 0xF)
-*/
-/*
-void M68000_Line_F_OpCode(void)
-{
-  PC -= SIZE_WORD;    // PC needs to be at address of Line-F instruction
-  ExceptionVector = EXCEPTION_LINE_F;
-  M68000_Exception();
-}
-*/
-
