@@ -26,6 +26,7 @@ unsigned long OpCode_ConnectedDrive(uae_u32 opcode);
 unsigned long OpCode_TimerD(uae_u32 opcode);
 unsigned long OpCode_GemDos(uae_u32 opcode);
 unsigned long OpCode_OldGemDos(uae_u32 opcode);
+unsigned long OpCode_VDI(uae_u32 opcode);
 
 
 #define write_log printf
